--- a/package.json
+++ b/package.json
@@ -30,5 +30,6 @@
     "react": ">= 16.8.0",
     "react-redux": ">= 7.2.0",
     "redux": ">= 3.7.1"
-  }
+  },
+  "homepage": "https://github.com/asbillings07/ng-redux-connect"
 }
